--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -3,11 +3,33 @@
   become: yes
   vars:
     docker_image_tag: "{{ image_tag | default('latest') }}"
+
   tasks:
-    - name: Install Docker
+    - name: Install prerequisites
       apt:
-        name: docker.io
+        name: "{{ item }}"
         state: present
+        update_cache: yes
+      loop:
+        - apt-transport-https
+        - ca-certificates
+        - curl
+        - software-properties-common
+
+    - name: Add Docker GPG key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker APT repository
+      apt_repository:
+        repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+        state: present
+
+    - name: Install Docker CE
+      apt:
+        name: docker-ce
+        state: latest
         update_cache: yes
 
     - name: Install Docker Compose
