--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -1,61 +1,58 @@
 ---
-- name: Setup EC2 with Docker, Docker Compose, and Nginx
+- name: Setup Docker on Ubuntu EC2
   hosts: all
   become: yes
 
   tasks:
-    - name: Update and upgrade apt packages
-      apt:
-        update_cache: yes
-        upgrade: dist
+    - name: Gather facts
+      setup:
 
-    - name: Install prerequisites
-      apt:
-        name: "{{ item }}"
-        state: present
-        update_cache: yes
-      loop:
-        - apt-transport-https
-        - ca-certificates
-        - curl
-        - software-properties-common
-        - gnupg
+    - name: Remove old Docker repo file if it exists
+      file:
+        path: /etc/apt/sources.list.d/docker.list
+        state: absent
 
-    - name: Ensure /etc/apt/keyrings exists
+    - name: Remove old Docker repo entry from sources.list (if exists)
+      lineinfile:
+        path: /etc/apt/sources.list
+        regexp: '^deb .*download.docker.com'
+        state: absent
+
+    - name: Ensure /etc/apt/keyrings directory exists
       file:
         path: /etc/apt/keyrings
         state: directory
         mode: "0755"
 
-    - name: Add Docker GPG key (idempotent)
+    - name: Download Docker GPG key
       get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker.asc
         mode: "0644"
+        force: yes
 
     - name: Add Docker APT repository
       apt_repository:
         repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
         filename: docker
-
-    - name: Install Docker CE
-      apt:
-        name: docker-ce
-        state: latest
         update_cache: yes
 
-    - name: Install Docker Compose
-      get_url:
-        url: https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-{{ ansible_system | lower }}-{{ ansible_architecture }}
-        dest: /usr/local/bin/docker-compose
-        mode: "0755"
+    - name: Update and upgrade apt packages
+      apt:
+        update_cache: yes
+        upgrade: dist
 
-    - name: Create symlink for docker-compose
-      file:
-        src: /usr/local/bin/docker-compose
-        dest: /usr/bin/docker-compose
-        state: link
+    - name: Install Docker CE and dependencies
+      apt:
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+          - docker-buildx-plugin
+          - docker-compose-plugin
+        state: latest
+        update_cache: yes
 
     - name: Ensure Docker service is running
       service:
@@ -63,29 +60,8 @@
         state: started
         enabled: yes
 
-    - name: Copy Nginx config
-      copy:
-        src: ./nginx/revuhub.conf
-        dest: /etc/nginx/sites-available/revuhub.conf
-
-    - name: Enable Nginx config
-      file:
-        src: /etc/nginx/sites-available/revuhub.conf
-        dest: /etc/nginx/sites-enabled/revuhub.conf
-        state: link
-        force: yes
-
-    - name: Test Nginx config
-      command: nginx -t
-      register: nginx_test
-      ignore_errors: yes
-
-    - name: Fail if Nginx config is invalid
-      fail:
-        msg: "Nginx configuration is invalid"
-      when: nginx_test.rc != 0
-
-    - name: Restart Nginx
-      service:
-        name: nginx
-        state: restarted
+    - name: Add ubuntu user to docker group
+      user:
+        name: ubuntu
+        groups: docker
+        append: yes
