--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -1,49 +1,47 @@
 ---
 - name: Setup Docker on Ubuntu EC2
-  hosts: all
+  hosts: backend
   become: yes
+  vars:
+    docker_compose_version: "v2.19.0"
 
   tasks:
-    - name: Gather facts
-      setup:
-
-    - name: Remove old Docker repo file if it exists
-      file:
-        path: /etc/apt/sources.list.d/docker.list
-        state: absent
-
-    - name: Remove old Docker repo entry from sources.list (if exists)
-      lineinfile:
-        path: /etc/apt/sources.list
-        regexp: '^deb .*download.docker.com'
-        state: absent
-
-    - name: Ensure /etc/apt/keyrings directory exists
-      file:
-        path: /etc/apt/keyrings
-        state: directory
-        mode: "0755"
-
-    - name: Download Docker GPG key
-      get_url:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        dest: /etc/apt/keyrings/docker.asc
-        mode: "0644"
-        force: yes
-
-    - name: Add Docker APT repository
-      apt_repository:
-        repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
-        state: present
-        filename: docker
-        update_cache: yes
 
     - name: Update and upgrade apt packages
       apt:
         update_cache: yes
         upgrade: dist
 
-    - name: Install Docker CE and dependencies
+    - name: Install required packages
+      apt:
+        name:
+          - ca-certificates
+          - curl
+          - gnupg
+          - lsb-release
+        state: present
+        update_cache: yes
+
+    - name: Add Docker GPG key
+      command: >
+        mkdir -p /etc/apt/keyrings &&
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg |
+        gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+      args:
+        creates: /etc/apt/keyrings/docker.gpg
+
+    - name: Add Docker repository manually
+      copy:
+        dest: /etc/apt/sources.list.d/docker.list
+        content: |
+          deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+        mode: "0644"
+
+    - name: Update apt cache after adding Docker repo
+      apt:
+        update_cache: yes
+
+    - name: Install Docker packages
       apt:
         name:
           - docker-ce
@@ -65,3 +63,10 @@
         name: ubuntu
         groups: docker
         append: yes
+
+    - name: Install Docker Compose binary
+      get_url:
+        url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-linux-x86_64"
+        dest: /usr/local/bin/docker-compose
+        mode: '0755'
+        force: yes
