--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -1,72 +1,130 @@
 ---
-- name: Setup Docker on Ubuntu EC2
+- name: Deploy RevuHub Backend
   hosts: backend
   become: yes
   vars:
-    docker_compose_version: "v2.19.0"
-
+    docker_image_tag: "{{ image_tag | default('latest') }}"
   tasks:
 
-    - name: Update and upgrade apt packages
-      apt:
-        update_cache: yes
-        upgrade: dist
+    ############################################################
+    # 1️⃣ Cleanup old Docker repos to avoid Signed-By conflicts
+    ############################################################
+    - name: Remove old Docker APT list files
+      file:
+        path: /etc/apt/sources.list.d/docker.list
+        state: absent
 
-    - name: Install required packages
-      apt:
-        name:
-          - ca-certificates
-          - curl
-          - gnupg
-          - lsb-release
-        state: present
-        update_cache: yes
+    - name: Remove any leftover Docker keyrings
+      file:
+        path: /etc/apt/keyrings/docker.gpg
+        state: absent
 
-    - name: Add Docker GPG key
+    - name: Remove old Docker repo entries from sources.list
+      lineinfile:
+        path: /etc/apt/sources.list
+        regexp: '^deb .*download.docker.com.*'
+        state: absent
+
+    ############################################################
+    # 2️⃣ Ensure keyrings folder exists
+    ############################################################
+    - name: Ensure /etc/apt/keyrings exists
+      file:
+        path: /etc/apt/keyrings
+        state: directory
+        mode: '0755'
+
+    ############################################################
+    # 3️⃣ Add Docker GPG key and repository
+    ############################################################
+    - name: Download Docker GPG key
       command: >
-        mkdir -p /etc/apt/keyrings &&
         curl -fsSL https://download.docker.com/linux/ubuntu/gpg |
         gpg --dearmor -o /etc/apt/keyrings/docker.gpg
       args:
         creates: /etc/apt/keyrings/docker.gpg
 
-    - name: Add Docker repository manually
+    - name: Add Docker repository
       copy:
         dest: /etc/apt/sources.list.d/docker.list
         content: |
           deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-        mode: "0644"
+        mode: '0644'
 
-    - name: Update apt cache after adding Docker repo
+    - name: Update apt cache
       apt:
         update_cache: yes
 
-    - name: Install Docker packages
+    ############################################################
+    # 4️⃣ Install Docker and Docker Compose
+    ############################################################
+    - name: Install Docker
       apt:
-        name:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
-          - docker-buildx-plugin
-          - docker-compose-plugin
-        state: latest
+        name: docker-ce docker-ce-cli containerd.io
+        state: present
         update_cache: yes
 
-    - name: Ensure Docker service is running
-      service:
-        name: docker
-        state: started
-        enabled: yes
-
-    - name: Add ubuntu user to docker group
-      user:
-        name: ubuntu
-        groups: docker
-        append: yes
-
-    - name: Install Docker Compose binary
+    - name: Install Docker Compose
       get_url:
-        url: "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-linux-x86_64"
+        url: https://github.com/docker/compose/releases/download/v2.19.0/docker-compose-linux-x86_64
         dest: /usr/local/bin/docker-compose
-        mode: '0755'
-        force: yes
+        mode: "0755"
+
+    ############################################################
+    # 5️⃣ Setup backend directory and environment
+    ############################################################
+    - name: Ensure backend directory exists
+      file:
+        path: /home/ubuntu/backend
+        state: directory
+
+    - name: Copy production.env
+      copy:
+        content: "{{ production_env_content }}"
+        dest: /home/ubuntu/production.env
+        owner: ubuntu
+        group: ubuntu
+        mode: "0600"
+
+    ############################################################
+    # 6️⃣ Deploy backend via Docker Compose
+    ############################################################
+    - name: Deploy Docker Compose
+      template:
+        src: roles/backend/templates/docker-compose.yml.j2
+        dest: /home/ubuntu/backend/docker-compose.yml
+
+    - name: Start backend container
+      command: docker-compose -f /home/ubuntu/backend/docker-compose.yml up -d
+      args:
+        chdir: /home/ubuntu/backend
+
+    ############################################################
+    # 7️⃣ Install and configure Nginx
+    ############################################################
+    - name: Install Nginx
+      apt:
+        name: nginx
+        state: present
+        update_cache: yes
+
+    - name: Copy Nginx config
+      copy:
+        src: ../../nginx/revuhub.conf
+        dest: /etc/nginx/sites-available/revuhub.conf
+
+    - name: Enable Nginx site
+      file:
+        src: /etc/nginx/sites-available/revuhub.conf
+        dest: /etc/nginx/sites-enabled/revuhub.conf
+        state: link
+
+    - name: Remove default Nginx site
+      file:
+        path: /etc/nginx/sites-enabled/default
+        state: absent
+
+    - name: Restart Nginx
+      service:
+        name: nginx
+        state: restarted
