--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -7,8 +7,13 @@
   tasks:
 
     # ----------------------------
-    # Docker Setup
+    # System Update & Cleanup
     # ----------------------------
+    - name: Update and upgrade apt packages
+      apt:
+        update_cache: yes
+        upgrade: dist
+
     - name: Remove old Docker APT list files
       file:
         path: /etc/apt/sources.list.d/docker.list
@@ -32,9 +37,17 @@
         mode: '0755'
 
     - name: Download Docker GPG key
-      shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+      shell: |
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
       args:
         creates: /etc/apt/keyrings/docker.gpg
+
+    - name: Ensure proper permissions on Docker keyring
+      file:
+        path: /etc/apt/keyrings/docker.gpg
+        owner: root
+        group: root
+        mode: '0644'
 
     - name: Add Docker repository
       copy:
@@ -43,11 +56,16 @@
           deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
         mode: '0644'
 
-    - name: Update apt cache
+    - name: Clean apt cache
+      apt:
+        autoclean: yes
+        update_cache: yes
+
+    - name: Update apt cache after Docker repo setup
       apt:
         update_cache: yes
 
-    - name: Install Docker
+    - name: Install Docker packages
       apt:
         name:
           - docker-ce
@@ -59,10 +77,10 @@
       get_url:
         url: https://github.com/docker/compose/releases/download/v2.19.0/docker-compose-linux-x86_64
         dest: /usr/local/bin/docker-compose
-        mode: "0755"
+        mode: '0755'
 
     # ----------------------------
-    # Backend Deployment
+    # Prepare Backend Directory
     # ----------------------------
     - name: Ensure backend directory exists
       file:
@@ -70,7 +88,7 @@
         state: directory
         owner: ubuntu
         group: ubuntu
-        mode: "0755"
+        mode: '0755'
 
     - name: Copy production.env
       copy:
@@ -78,7 +96,7 @@
         dest: /home/ubuntu/production.env
         owner: ubuntu
         group: ubuntu
-        mode: "0600"
+        mode: '0600'
 
     - name: Deploy Docker Compose file
       template:
@@ -86,10 +104,10 @@
         dest: /home/ubuntu/backend/docker-compose.yml
         owner: ubuntu
         group: ubuntu
-        mode: "0644"
+        mode: '0644'
 
     - name: Start backend container
-      shell: docker-compose -f /home/ubuntu/backend/docker-compose.yml up -d
+      command: docker-compose -f /home/ubuntu/backend/docker-compose.yml up -d
       args:
         chdir: /home/ubuntu/backend
 
@@ -108,14 +126,13 @@
         dest: /etc/nginx/sites-available/revuhub.conf
         owner: root
         group: root
-        mode: "0644"
+        mode: '0644'
 
     - name: Enable Nginx site
       file:
         src: /etc/nginx/sites-available/revuhub.conf
         dest: /etc/nginx/sites-enabled/revuhub.conf
         state: link
-        force: yes
 
     - name: Remove default Nginx site
       file:
@@ -126,4 +143,3 @@
       service:
         name: nginx
         state: restarted
-        enabled: yes
