--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -1,10 +1,11 @@
----
 - name: Deploy RevuHub Backend (Idempotent)
   hosts: backend
   become: yes
   vars:
     docker_image_tag: "{{ image_tag | default('latest') }}"
     backend_dir: /home/ubuntu/backend
+    ecr_repo: 842676016170.dkr.ecr.ap-south-1.amazonaws.com/revuhub-backend
+    aws_region: ap-south-1
 
   tasks:
 
@@ -78,8 +79,14 @@
         dest: /usr/local/bin/docker-compose
         mode: "0755"
 
+    - name: Login to AWS ECR
+      shell: >
+        aws ecr get-login-password --region {{ aws_region }} | docker login --username AWS --password-stdin {{ ecr_repo }}
+      args:
+        executable: /bin/bash
+
     - name: Start backend container
-      command: docker-compose -f {{ backend_dir }}/docker-compose.yml up -d
+      shell: docker-compose -f {{ backend_dir }}/docker-compose.yml up -d
       args:
         chdir: "{{ backend_dir }}"
 
