--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -79,27 +79,25 @@
         dest: /usr/local/bin/docker-compose
         mode: "0755"
 
-       - name: Install unzip (required for AWS CLI)
-        apt:
-          name: unzip
-          state: present
-          update_cache: yes
-      
-      - name: Install AWS CLI v2
-        shell: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
-          unzip -o /tmp/awscliv2.zip -d /tmp
-          sudo /tmp/aws/install
-        args:
-          creates: /usr/local/bin/aws
-      
-      - name: Login to AWS ECR
-        shell: >
-          aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 842676016170.dkr.ecr.ap-south-1.amazonaws.com/revuhub-backend
-        args:
-          executable: /bin/bash
-  
+    - name: Install unzip (required for AWS CLI)
+      apt:
+        name: unzip
+        state: present
+        update_cache: yes
 
+    - name: Install AWS CLI v2
+      shell: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"
+        unzip -o /tmp/awscliv2.zip -d /tmp
+        sudo /tmp/aws/install
+      args:
+        creates: /usr/local/bin/aws
+
+    - name: Login to AWS ECR
+      shell: >
+        aws ecr get-login-password --region {{ aws_region }} | docker login --username AWS --password-stdin {{ ecr_repo }}
+      args:
+        executable: /bin/bash
 
     - name: Start backend container
       shell: docker-compose -f {{ backend_dir }}/docker-compose.yml up -d
