--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,10 +10,13 @@ services:
 
   nginx:
     image: nginx:latest
+    restart: always
     ports:
       - "80:80"
     volumes:
+      # Make sure this path is a FILE, not a directory
       - ./nginx/revuhub.conf:/etc/nginx/conf.d/default.conf:ro
+      # Make sure this path is a DIRECTORY
       - ./frontend/build:/usr/share/nginx/html:ro
     depends_on:
       - backend
